style(NoticeSrch):添加返回顶部

--- a/src/assets/com.less
+++ b/src/assets/com.less
@@ -63,13 +63,15 @@ body .m-navbar:after{border-bottom: none;}
 
 @font-face {
   font-family: 'YDUI';
-  src: url('//at.alicdn.com/t/font_521288_dryx4fgs72dcmcxr.eot');
-  src: url('//at.alicdn.com/t/font_521288_dryx4fgs72dcmcxr.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_521288_dryx4fgs72dcmcxr.woff') format('woff');
+  src: url('//at.alicdn.com/t/font_521288_ualev672qvkj4i.eot');
+  src: url('//at.alicdn.com/t/font_521288_ualev672qvkj4i.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_521288_ualev672qvkj4i.woff') format('woff');
 }
+body .yd-backtop{background-color: hsla(197, 100%, 93%, 0.8); border: none;}
 body .back-icon:before{ content: '\e63d';font-family: 'YDUI';}
 body .icon-refresh:before{ content: '\e641';font-family: 'YDUI';}
 body .icon-search:before{ content: '\e622';font-family: 'YDUI';}
+body .yd-backtop:after{content: '\e62f';font-family: 'YDUI';font-size: 0.7rem;color: #1571E5;}
 body .cell-arrow:after{
   content: '\e63c';
   margin: 0;
