--- a/src/assets/com.less
+++ b/src/assets/com.less
@@ -48,6 +48,23 @@ body .slider-pagination{
 body .slider-pagination>.slider-pagination-item{
   background-color:rgba(255, 255, 255, .55)
 }
+.y-backtop{
+  background-color: rgba(88, 108, 148, .8);
+  width: 1.4rem;
+  border-radius: 25px;
+  height: 0.7rem;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  right: 0;
+  bottom: 8%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  font-size: 0.28rem;
+  color: #fff;
+  z-index: 10000;
+}
 body .slider-pagination>.slider-pagination-item.slider-pagination-item-active{
   background-color:#fff;
   width:10px;
@@ -67,11 +84,12 @@ body .m-navbar:after{border-bottom: none;}
   src: url('//at.alicdn.com/t/font_521288_ualev672qvkj4i.eot?#iefix') format('embedded-opentype'),
   url('//at.alicdn.com/t/font_521288_ualev672qvkj4i.woff') format('woff');
 }
-body .yd-backtop{background-color: hsla(197, 100%, 93%, 0.8); border: none;}
+
+#scrollView{ position: static;}
 body .back-icon:before{ content: '\e63d';font-family: 'YDUI';}
 body .icon-refresh:before{ content: '\e641';font-family: 'YDUI';}
 body .icon-search:before{ content: '\e622';font-family: 'YDUI';}
-body .yd-backtop:after{content: '\e62f';font-family: 'YDUI';font-size: 0.7rem;color: #1571E5;}
+
 body .cell-arrow:after{
   content: '\e63c';
   margin: 0;
